--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.6.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.25",
+    "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-svg": "^15.11.1",
+    "react-native-wheel-color-picker": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/color": "^4.2.0",
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
