--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 node_modules/
 .expo/
 dist/
@@ -12,7 +11,6 @@ npm-debug.*
 web-build/
 .env
 .DS_Store
-=======
 # OSX
 .DS_Store
 
@@ -104,4 +102,7 @@ wheels/
 *.temp
 
 node_modules/
->>>>>>> 7bc46452 (Fixed sigil and circle)
+
+.env
+.env.*
+!.env.example
