--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.25",
+    "expo-av": "~15.0.2",
+    "expo-constants": "~17.0.4",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -31,6 +34,7 @@
     "@babel/core": "^7.25.2",
     "@types/color": "^4.2.0",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
   },
