--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "clean": "rm -rf node_modules && npm install",
+    "clean": "rimraf node_modules && npm install",
     "reset": "expo start -c",
     "lint": "eslint .",
     "type-check": "tsc"
@@ -25,9 +25,9 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
-    "react-native-svg": "^15.11.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-wheel-color-picker": "^1.3.1"
   },
   "devDependencies": {
@@ -35,7 +35,11 @@
     "@types/color": "^4.2.0",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/sharp": "^0.31.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "rimraf": "^6.0.1",
+    "sharp": "^0.33.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "private": true
