--- a/.gitignore
+++ b/.gitignore
@@ -1,108 +1,108 @@
-node_modules/
+# Expo
 .expo/
 dist/
-npm-debug.*
+web-build/
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
 *.orig.*
-web-build/
-.env
-.DS_Store
-# OSX
-.DS_Store
-
-# Xcode
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-ios/.xcode.env.local
-
-# Android/IntelliJ
-build/
-.idea
-.gradle
-local.properties
-*.iml
-*.hprof
-.cxx/
-*.keystore
-!debug.keystore
 
 # Node
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+.pnp.*
+.npm
+.yarn-integrity
 
-# Expo
-.expo/
-dist/
-web-build/
+# TypeScript
+*.tsbuildinfo
 
 # Environment variables
 .env
 .env.*
 !.env.example
 
-# TypeScript
-*.tsbuildinfo
+# macOS
+.DS_Store
+*.pem
 
-# Testing
-coverage/
+# Android/IntelliJ
+android/app/build/
+android/build/
+android/.gradle
+android/local.properties
+android/*.iml
+android/.idea/
+android/.gradle/
+android/app/debug.keystore
+android/app/release/
+android/**/*.hprof
+android/.cxx/
 
-# Editor directories and files
+# iOS
+ios/build/
+ios/Pods/
+ios/**/*.mode1v3
+ios/**/*.mode2v3
+ios/**/*.moved-aside
+ios/**/*.pbxuser
+ios/**/*.perspectivev3
+ios/**/*sync/
+ios/**/.sconsign.dblite
+ios/**/.tags*
+ios/**/.vagrant/
+ios/**/DerivedData/
+ios/**/Icon?
+ios/**/Pods/
+ios/**/.symlinks/
+ios/**/profile
+ios/**/xcuserdata
+ios/.generated/
+ios/Flutter/App.framework
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/Generated.xcconfig
+ios/Flutter/ephemeral/
+ios/Flutter/app.flx
+ios/Flutter/app.zip
+ios/Flutter/flutter_assets/
+ios/Flutter/flutter_export_environment.sh
+ios/ServiceDefinitions.json
+ios/Runner/GeneratedPluginRegistrant.*
+
+# IDE specific files
+.idea/
 .vscode/
 *.swp
 *.swo
 *.swn
 *.bak
+*.sublime-workspace
+*.sublime-project
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+# Testing
+coverage/
+.jest/
 
 # Temporary files
 *.log
 *.tmp
 *.temp
+.cache/
+.history/
 
-node_modules/
+# Build outputs
+build/
+out/
 
-.env
-.env.*
-!.env.example
+# Misc
+.DS_Store
+*.pem
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
